test/simple/correct/Export2.hs
module Export2(Number(Three), three) where

data Number = Three

three :: Int
three = 2
