test/simple/typeerrors/Examples/PatConstructorApply.hs
module PatConstructorApply where

data A = A Int Int

f (A 3 True) = "kikker"
